tests/snapshot/error/source_locations/statement/for_in/new_for_in_iterator.exp
Error: 
  ┌ source_locations/statement/for_in/new_for_in_iterator.js:3:11
  |
3 |     throw new Error()
  |           ^
Stack trace:
  at ownKeys (source_locations/statement/for_in/new_for_in_iterator.js:3:11)
  at <global> (source_locations/statement/for_in/new_for_in_iterator.js:7:15)